--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h3 class="surah">Where is the evidence that the attributes of Allah are unique?</h3>
         <p class="surah">Surah Shura 42:11 فَاطِرُ ٱلسَّمَـٰوَٰتِ وَٱلْأَرْضِ ۚ جَعَلَ لَكُم مِّنْ أَنفُسِكُمْ أَزْوَٰجًۭا وَمِنَ ٱلْأَنْعَـٰمِ أَزْوَٰجًۭا ۖ يَذْرَؤُكُمْ فِيهِ ۚ لَيْسَ كَمِثْلِهِۦ شَىْءٌۭ ۖ وَهُوَ ٱلسَّمِيعُ ٱلْبَصِيرُ</p>
 
-        <h3 class="surah">The Quran is the speeh of who?</h3>
+        <h3 class="surah">The Quran is the speech of who?</h3>
         <p class="surah">Allah</p>
 
         <h3 class="surah">Was it revealed or created?</h3>
